--- a/BE/testRabbitMQ.ini
+++ b/BE/testRabbitMQ.ini
@@ -1,9 +1,9 @@
 [testServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 10.10.10.105
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = IT490
+VHOST = it490
 EXCHANGE = test
 QUEUE = test
 ;EXCHANGE_TYPE = ????
