--- a/BE/deployRabbitMQ.ini
+++ b/BE/deployRabbitMQ.ini
@@ -1,9 +1,9 @@
 [deployServer]
-BROKER_HOST = 10.10.10.105
+BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = test
-PASSWORD = test
-VHOST = it490
+USER = deploy
+PASSWORD = deploy
+VHOST = deploy
 EXCHANGE = deploy
 QUEUE = deploy
 ;EXCHANGE_TYPE = ????
