--- a/BE/deployRabbitMQ.ini
+++ b/BE/deployRabbitMQ.ini
@@ -1,9 +1,9 @@
 [deployServer]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = deploy
 QUEUE = deploy
 ;EXCHANGE_TYPE = ????
