--- a/BE/deployRabbitMQServer.ini
+++ b/BE/deployRabbitMQServer.ini
@@ -3,7 +3,7 @@ BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = it490
+VHOST = IT490
 EXCHANGE = test
 QUEUE = test
 ;EXCHANGE_TYPE = ????
@@ -34,9 +34,9 @@ AUTO_DELETE = true
 [BEProd]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = BEProd
 QUEUE = BEProd
 ;EXCHANGE_TYPE = ????
@@ -45,9 +45,9 @@ AUTO_DELETE = true
 [FEQA]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = FEQA
 QUEUE = FEQA
 ;EXCHANGE_TYPE = ????
@@ -56,9 +56,9 @@ AUTO_DELETE = true
 [FEProd]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = FEProd
 QUEUE = FEProd
 ;EXCHANGE_TYPE = ????
@@ -67,9 +67,9 @@ AUTO_DELETE = true
 [DMZQA]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = DMZQA
 QUEUE = DMZQA
 ;EXCHANGE_TYPE = ????
@@ -78,9 +78,9 @@ AUTO_DELETE = true
 [DMZProd]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = deploy
-PASSWORD = deploy
-VHOST = deploy
+USER = admin
+PASSWORD = admin
+VHOST = IT490
 EXCHANGE = DMZProd
 QUEUE = DMZProd
 ;EXCHANGE_TYPE = ????
